src/test/ui/impl-header-lifetime-elision/path-elided.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/path-elided.rs:7:18
   |
LL | impl MyTrait for Foo {
   |                  ^^^ expected lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
